# ChangeLog for media-sound/ecasound
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/ecasound/ChangeLog,v 1.51 2008/11/30 20:06:53 armin76 Exp $

  30 Nov 2008; Raúl Porcel <armin76@gentoo.org> ecasound-2.5.2.ebuild:
  sparc stable wrt #245697

  08 Nov 2008; Markus Meier <maekke@gentoo.org> ecasound-2.5.2.ebuild:
  amd64/x86 stable, bug #245697

  29 Sep 2008; Diego Pettenò <flameeyes@gentoo.org>
  ecasound-2.5.2-r1.ebuild:
  Avoid double econf run with EAPI=2.

*ecasound-2.5.2-r1 (29 Sep 2008)

  29 Sep 2008; Diego Pettenò <flameeyes@gentoo.org>
  +ecasound-2.5.2-r1.ebuild:
  Add a new revision using EAPI=2 and USE dependencies.

*ecasound-2.5.2 (29 Aug 2008)

  29 Aug 2008; Alexis Ballier <aballier@gentoo.org> +ecasound-2.5.2.ebuild:
  version bump

*ecasound-2.5.0 (17 Aug 2008)

  17 Aug 2008; Alexis Ballier <aballier@gentoo.org>
  +files/ecasound-2.5.0-gcc43.patch, +ecasound-2.5.0.ebuild:
  version bump

  29 May 2008; Ali Polatel <hawking@gentoo.org> ecasound-2.4.6.1.ebuild:
  python_mod_compile is ROOT aware.

*ecasound-2.4.6.1 (06 May 2008)

  06 May 2008; Samuli Suominen <drac@gentoo.org>
  +files/ecasound-2.4.6.1-gcc43.patch, +ecasound-2.4.6.1.ebuild:
  Version bump for bug 220429 with GCC 4.3 patch by Peter Alfredsen.

  16 Jan 2008; Fabian Groffen <grobian@gentoo.org> ecasound-2.4.3.ebuild,
  ecasound-2.4.4.ebuild, ecasound-2.4.5.ebuild:
  Dropped ppc-macos keyword, see you in prefix

  07 Jul 2007; Diego Pettenò <flameeyes@gentoo.org> ecasound-2.4.5.ebuild:
  Remember that ebuild(1) will not clean environment. Fix missing built_with_use.

  06 Jul 2007; Diego Pettenò <flameeyes@gentoo.org> ecasound-2.4.5.ebuild:
  Add a pkg_setup check for midi USE flag in alsa-lib.

  02 Jul 2007; Diego Pettenò <flameeyes@gentoo.org> metadata.xml:
  Hand to newly-born proaudio herd.

*ecasound-2.4.5 (15 Jun 2007)

  15 Jun 2007; Samuli Suominen <drac@gentoo.org> +ecasound-2.4.5.ebuild: