@@ -2,14 +2,10 @@ AUX ecasound-2.4.5-prefix.patch 785 RMD160 3e9270623ccafd8df47cf82897a9d952cf4ee
 AUX ecasound-2.4.6.1-darwin.patch 346 RMD160 1f9850bf198082c6aa2e2bfe1938c5e9f2a6badf SHA1 07204963c487583458992c5814a16ef154edab06 SHA256 cf2d457d03ac63142f6ec95955c3f32e88473f09cf884a9191f3de2dd25fd1dd
 AUX ecasound-2.4.6.1-gcc43.patch 1358 RMD160 42a5d7616726acba1e493df36c96d69b492d677c SHA1 0272e4e56b22fb841138a5272e85e530d8334343 SHA256 4dba2c3c32eaf113cacb657beb6e7de26d1d0edaacbe3d8823098453e08a36f0
 AUX ecasound-2.5.0-gcc43.patch 392 RMD160 4a3f83de03420950244242b40517b22aeb7a872d SHA1 ad5faa2b5c9cdb67fb9a284144ca6ba566f1f67f SHA256 328d58d03f0abfd7d0b450ade908e88eb671040db38c00f91b1efc7695309de4
-DIST ecasound-2.4.5.tar.gz 946918 RMD160 fec2a974d8014b1530b51044678b76540ba1f9aa SHA1 28ec718f5d174819adc382744176a0e245ae704f SHA256 462f5c395ead6559ba17f4bde113084fa543660bd8637cc9d686cedc481d4768
-DIST ecasound-2.4.6.1.tar.gz 949606 RMD160 6c95d83d751b293671011ee5432af7aa4e8d05cc SHA1 92afbb97bf918d907df2827a6e037c251b2768d2 SHA256 0443801a6c77fea9d537474f931177740944be59ace20d2b40410eea09d861ea
-DIST ecasound-2.5.0.tar.gz 974620 RMD160 58a1ce8bac4e8254b0340a83a496c007916ba3e9 SHA1 0df9d5c4afc7cc74342881ee7558d90660f6add3 SHA256 3c80696a7dcd63a25fe8933237075405beef0877f30573fb9e12d943af567790
 DIST ecasound-2.5.2.tar.gz 975972 RMD160 1964af347dc2c32fb72eb49f1c8208c6fefb7b99 SHA1 def017029b1694f62725a3512a678858232e75b7 SHA256 f40f0a8335fc0d474e5b6dfd9a47f68f809a819d406a21953b66f209bc65c115
-EBUILD ecasound-2.4.5.ebuild 3489 RMD160 aec0c3393e9ab403bf50f77cb278ffd05ae24a32 SHA1 906732057483b21bcffac702731cefe6f3d552d7 SHA256 be6c563c6fa290e9e628f435480495bb1de9432ae4f7c76f90ae4bd55073e268
-EBUILD ecasound-2.4.6.1.ebuild 2752 RMD160 e046de54c4407d19cc6d3b03aef81ffd30ba0008 SHA1 7dc27306ff5319417a9327d582ccda6b8f08a218 SHA256 70c67dc056dcb501ad1e9808cee15a543b81c4cf57683c2e5fa4ee5cb7739ba2
-EBUILD ecasound-2.5.0.ebuild 2711 RMD160 b3dc2dedbeed88d904fa0f0405adafc956f92ce2 SHA1 2769efc480b9b8e8ac1d9c220d4d03cea5314905 SHA256 46390e3cd36832f62c26c5215719dc7775198c2bdafa1792e71af5cd5815175d
+DIST ecasound-2.6.0.tar.gz 966629 RMD160 25ca71ff8f270ee871cb3f86f9e79e22b866d0cc SHA1 fb34fd31d112a4a1d3e1a87f302324152f62eac7 SHA256 925d12a422883c356565c542110d070f61c3693e01eaa1b00eb25082e4779f88
 EBUILD ecasound-2.5.2-r1.ebuild 2509 RMD160 ff87488a42167cb5291ef3ad17816e03ae118a2f SHA1 be41c0ec4d923cb9b94a9392e7399b6c34246fc3 SHA256 426bad4839ed3446068e7d19ec376dde7d9249ac1896f75e8072ed4b526a594a
 EBUILD ecasound-2.5.2.ebuild 2671 RMD160 95a999e9e83b9cf8d837f8232e9e065455520ce7 SHA1 497a9e7f16f5c7d0b07212a59564660ec004933f SHA256 5c91edcf01f4efab923304bcee45894a43cfef3bcedae6aca4f16c6ed0eae777
-MISC ChangeLog 7911 RMD160 f59e8a799da8e419592e08f2f3f111792a456c98 SHA1 8a2afe31b2a81bc86d63861408e50f4e7318bf26 SHA256 f77cc1fe1afa9cef6e74ae70fa440db6be5624ab40a1df6a407298129bf485a3
+EBUILD ecasound-2.6.0.ebuild 2504 RMD160 045022b4520ee78427640cb2c5f0cabef231aa6e SHA1 6eedf036599c55ee267804a0106d7a4648bfd53c SHA256 7ab4ced48178fea2451decf955c980ec946abd67eb38866444b797cbc8b7c3ec
+MISC ChangeLog 8238 RMD160 ea0ae09c139914f0908645ad78b7f16201feb779 SHA1 bf4d0817ecb4fa33274d8f6dd1b49acfb902df17 SHA256 c72800c4765f4b84b9a980fc3aeb9747e325cf1d4ef221dc7eff8d8508bc8fc6
 MISC metadata.xml 756 RMD160 6d3c33eeed4fd27e66efc39cef9df6e4f6c0c85c SHA1 ad6acbd92059cb3a42c63831bea1cca257918199 SHA256 1f0d3106e16d53e9dc59cbb3c5859e07d8381231e7eb0812eb6bf971e99aa37c
