@@ -1,6 +1,16 @@
 # ChangeLog for media-sound/ecasound
-# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/ecasound/ChangeLog,v 1.51 2008/11/30 20:06:53 armin76 Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-sound/ecasound/ChangeLog,v 1.53 2009/04/30 22:19:09 patrick Exp $
+
+  30 Apr 2009; Patrick Lauer <patrick@gentoo.org> -ecasound-2.4.3.ebuild,
+  -ecasound-2.4.4.ebuild, -ecasound-2.4.5.ebuild, -ecasound-2.4.6.1.ebuild,
+  -ecasound-2.5.0.ebuild:
+  Remove old
+
+*ecasound-2.6.0 (30 Apr 2009)
+
+  30 Apr 2009; Patrick Lauer <patrick@gentoo.org> +ecasound-2.6.0.ebuild:
+  Bump to 2.6.0, fixes #265940
 
   30 Nov 2008; Raúl Porcel <armin76@gentoo.org> ecasound-2.5.2.ebuild:
   sparc stable wrt #245697
